--- a/New Game.html
+++ b/New Game.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title>TIC-TAC-TOE</title>
+        <title>TIKTOK-TOE</title>
         <link rel="stylesheet" href="style.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <header>
-            <h1>TIC-TAC-TOE</h1>
+            <h1>TIKTOK-TOE</h1>
 
             <div class="score-verti">
                 <div class="score-hori"> 
