--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
                 <div class="box col-3" id="9"></div>
             </div>
         </div>
-        <script src="index.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
